--- a/CoPheeMap.ipynb
+++ b/CoPheeMap.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -q -r requirements.txt\n",
     "!git clone https://github.com/bzhanglab/CoPheeMap.git\n",
-    "%cd CoPheeMap"
+    "%cd CoPheeMap\n",
+    "%pip install -q -r requirements.txt"
    ]
   },
   {
