update image url

--- a/CoPheeMap.ipynb
+++ b/CoPheeMap.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "Construction of the ground truth of co-regulated sites\n",
-    "![Figure 1](https://github.com/bzhanglab/CoPheeMap/blob/main/figures/fig1.jpeg)"
+    "![Figure 1](https://raw.githubusercontent.com/bzhanglab/CoPheeMap/main/figures/fig1.jpeg)\n"
    ]
   },
   {
@@ -357,7 +357,7 @@
     "PPI_2=[]\n",
     "j_index=[]\n",
     "j_index2=[]\n",
-    "pro_list1=list(set(PPI_kin_400['protein1']))\n",
+    "pro_list1=list(set(dict_PPI_400['protein1']))\n",
     "data=combined_cancer_pos\n",
     "#data=combined_cancer_neg\n",
     "for i in range(len(data)):\n",
@@ -433,7 +433,7 @@
    "metadata": {},
    "source": [
     "Construction of training, testing and validation data\n",
-    "![Figure 2](https://github.com/bzhanglab/CoPheeMap/blob/main/figures/fig2.png)"
+    "![Figure 2](https://raw.githubusercontent.com/bzhanglab/CoPheeMap/main/figures/fig2.png)"
    ]
   },
   {
@@ -565,7 +565,7 @@
    "id": "b2fd7e7d",
    "metadata": {},
    "source": [
-    "![Figure 3](https://github.com/bzhanglab/CoPheeMap/blob/main/figures/fig3.jpeg)"
+    "![Figure 3](https://raw.githubusercontent.com/bzhanglab/CoPheeMap/main/figures/fig3.jpeg)"
    ]
   },
   {
