--- a/CoPheeMap.ipynb
+++ b/CoPheeMap.ipynb
@@ -5,7 +5,8 @@
    "id": "f3bf7aec",
    "metadata": {},
    "source": [
-    "Construction of the ground truth of co-regulated sites\n",
+    "# Construction of the ground truth of co-regulated sites\n",
+    "\n",
     "![Figure 1](https://raw.githubusercontent.com/bzhanglab/CoPheeMap/main/figures/fig1.jpeg)\n"
    ]
   },
@@ -44,7 +45,7 @@
    "id": "10892dd6",
    "metadata": {},
    "source": [
-    "Part I: Positive phosphosite pairs and negative phosphosite paris generated from gold standard KSAs"
+    "## Part I: Positive phosphosite pairs and negative phosphosite paris generated from gold standard KSAs"
    ]
   },
   {
@@ -270,7 +271,7 @@
    "id": "d0c9b000",
    "metadata": {},
    "source": [
-    "Part II: Features calculation: sequence similarities; kinase interaction profile similarities; PCCs"
+    "## Part II: Features calculation: sequence similarities; kinase interaction profile similarities; PCCs"
    ]
   },
   {
@@ -432,7 +433,7 @@
    "id": "c67ce67d",
    "metadata": {},
    "source": [
-    "Construction of training, testing and validation data\n",
+    "# Construction of training, testing and validation data\n",
     "![Figure 2](https://raw.githubusercontent.com/bzhanglab/CoPheeMap/main/figures/fig2.png)"
    ]
   },
@@ -549,7 +550,7 @@
    "id": "31a41421",
    "metadata": {},
    "source": [
-    "Construction of CoPheeMap"
+    "# Construction of CoPheeMap"
    ]
   },
   {
