--- a/PSSM.ipynb
+++ b/PSSM.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "80c8e68a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/bzhanglab/CoPheeMap.git\n",
+    "%cd CoPheeMap\n",
+    "%pip install -q -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "120b040d",
    "metadata": {},
