--- a/CoPheeMap.ipynb
+++ b/CoPheeMap.ipynb
@@ -15,6 +15,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "66fcc1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/bzhanglab/CoPheeMap.git\n",
+    "%cd CoPheeMap\n",
+    "%pip install -q -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "949e2a61",
    "metadata": {},
