create directories before saving files

--- a/PSSM.ipynb
+++ b/PSSM.ipynb
@@ -80,6 +80,9 @@
    "outputs": [],
    "source": [
     "lst=os.listdir('CoPheeKSA/PSSM/Kinase_5+sub/')\n",
+    "os.mkdir('CoPheeKSA/PSSM/removed_test')\n",
+    "for i in range(10):\n",
+    "    os.mkdir('CoPheeKSA/PSSM/removed_test/'+str(i))\n",
     "ks=[i.split('_')[0] for i in lst]\n",
     "#Generate PSSM matrix from gold standard KSAs which already removed test data\n",
     "for j in range(10):\n",
