read from zip file

--- a/CoPheeMap.ipynb
+++ b/CoPheeMap.ipynb
@@ -1175,7 +1175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network = pd.read_csv('Supplementary_table/Table_S2_CoPheeMap.tsv', sep='\\t')"
+    "network = pd.read_csv('Supplementary_table/Table_S2_CoPheeMap.tsv.zip', compression='zip', sep='\\t')"
    ]
   },
   {
