--- a/CoPheeKSA_XGBoost.ipynb
+++ b/CoPheeKSA_XGBoost.ipynb
@@ -4496,26 +4496,26 @@
     }
    ],
    "source": [
-    "# plt.figure(figsize=(8, 4))\n",
-    "# x = \"label\"\n",
-    "# y = \"AUROC\"\n",
-    "# #hue = \"label\"\n",
-    "# ax = sns.boxplot(data=tmp, x=x, y=y,palette=['royalblue','gold','darkseagreen','orangered','orange']+[sns.color_palette()[8]])\n",
-    "# add_stat_annotation(ax, data=tmp, x=x, y=y,\n",
-    "#                     box_pairs=[('PSSM', 'PSSM+CoPheeMap+KMap'),\n",
-    "#                                ('Dynamic_features','Dynamic_features+CoPheeMap+KMap'),\n",
-    "#                                ('PSSM+CoPheeMap+KMap','CoPheeKSA'),\n",
-    "#                                ('Dynamic_features+CoPheeMap+KMap','CoPheeKSA')],\n",
-    "#                     test='t-test_ind', text_format='star', loc='outside', verbose=2)\n",
-    "# plt.xticks(rotation=30,size=14,ha='right')\n",
-    "# plt.yticks(size=14)\n",
-    "# #plt.title('PSSM zscores',size=14)\n",
-    "# plt.xlabel('')\n",
-    "# plt.ylabel('AUROC',size=14)\n",
-    "# #plt.legend(['PSSM','CoPheeMap+KMap','PSSM+CoPheeMap+KMap','Dynamic features','Dynamic features+CoPheeMap+KMap',\n",
-    "# #            'CoPheeKSA'],loc='upper left', bbox_to_anchor=(1.03, 1),fontsize=12)\n",
-    "# plt.savefig('CoPheeKSA/comparision_auroc_KSA.jpeg',bbox_inches='tight',dpi=300,pad_inches=0.1,orientation='portrait')\n",
-    "# plt.show()"
+    "plt.figure(figsize=(8, 4))\n",
+    "x = \"label\"\n",
+    "y = \"AUROC\"\n",
+    "#hue = \"label\"\n",
+    "ax = sns.boxplot(data=tmp, x=x, y=y,palette=['royalblue','gold','darkseagreen','orangered','orange']+[sns.color_palette()[8]])\n",
+    "add_stat_annotation(ax, data=tmp, x=x, y=y,\n",
+    "                    box_pairs=[('PSSM', 'PSSM+CoPheeMap+KMap'),\n",
+    "                               ('Dynamic_features','Dynamic_features+CoPheeMap+KMap'),\n",
+    "                               ('PSSM+CoPheeMap+KMap','CoPheeKSA'),\n",
+    "                               ('Dynamic_features+CoPheeMap+KMap','CoPheeKSA')],\n",
+    "                    test='t-test_ind', text_format='star', loc='outside', verbose=2)\n",
+    "plt.xticks(rotation=30,size=14,ha='right')\n",
+    "plt.yticks(size=14)\n",
+    "#plt.title('PSSM zscores',size=14)\n",
+    "plt.xlabel('')\n",
+    "plt.ylabel('AUROC',size=14)\n",
+    "#plt.legend(['PSSM','CoPheeMap+KMap','PSSM+CoPheeMap+KMap','Dynamic features','Dynamic features+CoPheeMap+KMap',\n",
+    "#            'CoPheeKSA'],loc='upper left', bbox_to_anchor=(1.03, 1),fontsize=12)\n",
+    "plt.savefig('CoPheeKSA/comparision_auroc_KSA.jpeg',bbox_inches='tight',dpi=300,pad_inches=0.1,orientation='portrait')\n",
+    "plt.show()"
    ]
   },
   {
