--- a/PSSM.ipynb
+++ b/PSSM.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip uninstall -y plotnine\n",
     "!git clone https://github.com/bzhanglab/CoPheeMap.git\n",
     "%cd CoPheeMap\n",
     "%pip install -q -r requirements.txt"
