--- a/CoPheeMap.ipynb
+++ b/CoPheeMap.ipynb
@@ -16,10 +16,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip uninstall -y plotnine\n",
-    "!git clone https://github.com/bzhanglab/CoPheeMap.git\n",
-    "%cd CoPheeMap\n",
-    "%pip install -q -r requirements.txt"
+    "try:\n",
+    "    import google.colab\n",
+    "    IN_COLAB = True\n",
+    "except ImportError:\n",
+    "    IN_COLAB = False\n",
+    "\n",
+    "if IN_COLAB:\n",
+    "    %pip uninstall -y plotnine\n",
+    "    !git clone https://github.com/bzhanglab/CoPheeMap.git\n",
+    "    %cd CoPheeMap\n",
+    "    %pip install -q -r requirements.txt"
    ]
   },
   {
